--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         </header>
         
         <section class="input-section">
-            <h2 class="section-title">Por favor, digite el nombre de sus amigos:</h2>
+            <h2 class="section-title">Digite el nombre de sus amigos:</h2>
             <div class="input-wrapper">
                 <input type="text" id="amigo" class="input-name" placeholder="Escribe un nombre">
                 <button class="button-add" id="botonAñadir" onclick="agregarAmigo()">Añadir amigo</button>
             </div>
            
-            <ul id="listaAmigos" class="name-list" aria-labelledby="listaAmigos" role="list"></ul>
+            <ul id="listaAmigos" class="name-list" aria-labelledby="listaAmigos" role="list">No hay amigos en la lista</ul>
             <ul id="resultado" class="result-list" aria-live="polite"></ul>
 
             <div class="button-container">
