Inclusion del boton reiniciar

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
                     SORTEAR AMIGO
                 </button>
+                <button class="button-reiniciar" onclick="reiniciar()" aria-label="Reiniciar juego">
+                    REINICIAR
+                </button>
             </div>
         </section>
     </main>
