Se agrego un footer con el nombre del desarrollador

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
                 </button>
             </div>
         </section>
+        <footer class="footer">
+            <p>Desarrollado por J Jimeno</p>
+        </footer>
     </main>
+    
 
     <script src="app.js" defer></script>
 </body>
